# grpc-test

./: CMakeLists.txt  CMakePresets.json  Dockerfile.cpp-env-ubuntu  helloworld.proto  server.cpp
toolchain/: ubuntu-arm64-clang.cmake
